--- a/CSS/default.css
+++ b/CSS/default.css
@@ -1,3 +1,21 @@
+@media screen and (max-width: 990px) {
+  #suchbutton {
+    display: none;
+  }
+  #suchinput {
+    display: none;
+  }
+
+  .terminal-loader {
+    width: 20em;
+  }
+
+  #navbarSupportedContent {
+    position: relative;
+    left: 70vw;
+  }
+}
+
 body {
     background-color: #1f1f1f; 
     color: white; 
@@ -43,6 +61,13 @@ body {
   
   .btn {
     margin-right: 5px;
+  }
+
+  .navbar-toggler {
+    position: relative;
+    left: 80vw;
+    border-color:#1f1f1f;
+    background-color:#a855f7;
   }
 
   @keyframes blinkCursor {
