--- a/CSS/default.css
+++ b/CSS/default.css
@@ -5,11 +5,14 @@
   #suchinput {
     display: none;
   }
-
-  .terminal-loader {
-    width: 20em;
-  }
   
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -17,6 +20,8 @@ body {
     color: white; 
     margin: 0; 
     padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   
   .navbar {
