--- a/CSS/default.css
+++ b/CSS/default.css
@@ -63,9 +63,8 @@ body {
 
 .navbar-toggler {
   position: relative;
-  left: 80vw;
-  border-color:#1f1f1f;
   background-color:#a855f7;
+  border-color: #a855f7;
 }
 
 @keyframes blinkCursor {
