--- a/CSS/quiz.css
+++ b/CSS/quiz.css
@@ -1,22 +1,39 @@
 
-.quiz {
+.taschenrechner {
     display: flex;
     flex-direction: column; 
     align-items: center;    
     justify-content: center;
+    margin-top: 100px;
 }
 
 .quizinput {
     border-radius: 10px;
     position: relative;
     border-color: #a855f7;
-    padding: 10px; 
-    margin-top: 10px; 
+    padding: 5px; 
+    margin-top: 2px;
+    margin-bottom: 10px; 
 }
 
-.frage {
+.zahl1 .zahl2 {
     position: relative;
     bottom: auto; 
     font-size: 18px; 
     text-align: center; 
+}
+
+select {
+    width: 190px !important;  
+    margin-bottom: 10px;
+}
+
+.btn-primary {
+    background-color: #a855f7 !important; 
+    border-color: #a855f7 !important; 
+}
+
+.btn-primary:hover {
+    background-color: #7c3aed !important; 
+    border-color: #7c3aed !important; 
 }
